--- a/StationProject/Components/UI/FooterCustom.razor
+++ b/StationProject/Components/UI/FooterCustom.razor
@@ -10,10 +10,9 @@
             <div class="f-column">
                 <a href="#" class="footer-link-important">Новости</a>
                 <a href="#" class="footer-link">Контакты</a>
-                <a href="#" class="footer-link">Вакансии</a>
             </div>
             <div class="f-column">
-                <a href="#" class="footer-link-important">О нас</a>
+                <a href="\AboutPage" class="footer-link-important">О нас</a>
                 <a href="#" class="footer-link">Вакансии</a>
             </div>
         </div>
