--- a/StationProject/Components/Account/Pages/Login.razor
+++ b/StationProject/Components/Account/Pages/Login.razor
@@ -14,7 +14,7 @@
 <PageTitle>Log in</PageTitle>
 
 <h1>Log in</h1>
-<div class="row">
+<div class="row" style="padding: 20px 60px">
     <div class="col-md-4">
         <section>
             <StatusMessage Message="@errorMessage"/>
