--- a/StationProject/Components/Account/Shared/ManageLayout.razor
+++ b/StationProject/Components/Account/Shared/ManageLayout.razor
@@ -1,17 +1,22 @@
-﻿@inherits LayoutComponentBase
+﻿@using StationProject.Components.Pages
+@inherits LayoutComponentBase
 @layout AccountLayout
 
-<h1>Manage your account</h1>
 
-<div>
+<div style="padding: 20px 60px">
+    <h1>Manage your account</h1>
     <h2>Change your account settings</h2>
     <hr/>
-    <div class="row">
-        <div class="col-md-3">
-            <ManageNavMenu/>
+    <div class="f-column gap-20">
+        <div class="row">
+            <div class="col-md-3">
+                <ManageNavMenu/>
+            </div>
+            <div class="col-md-9">
+                @Body
+            </div>
         </div>
-        <div class="col-md-9">
-            @Body
-        </div>
+        
+        <OrdersBlock/>
     </div>
 </div>
