--- a/StationProject/Components/Layout/MainLayout.razor
+++ b/StationProject/Components/Layout/MainLayout.razor
@@ -11,7 +11,9 @@
     <main class="f-column">
         <HeaderCustom/>
 
-        @Body
+        <div style="flex: 1">
+            @Body
+        </div>
 
         <FooterCustom/>
     </main>
