--- a/StationProject/Components/Pages/AdminPage.razor
+++ b/StationProject/Components/Pages/AdminPage.razor
@@ -6,9 +6,9 @@
 
 <div class="f-column" style="padding: 0 60px">
     <div class="f-row gap-20" style="padding: 20px 0">
-        <button class="tab-button @GetSelectedButtonStyle(AdminTab.Stats)" @onclick="() => SelectTab(AdminTab.Stats)">Stats</button>
-        <button class="tab-button @GetSelectedButtonStyle(AdminTab.Products)" @onclick="() => SelectTab(AdminTab.Products)">Stats</button>
-        <button class="tab-button @GetSelectedButtonStyle(AdminTab.Users)" @onclick="() => SelectTab(AdminTab.Users)">Stats</button>
+        <button class="tab-button @GetSelectedButtonStyle(AdminTab.Stats)" @onclick="() => SelectTab(AdminTab.Stats)">Статистика</button>
+        <button class="tab-button @GetSelectedButtonStyle(AdminTab.Products)" @onclick="() => SelectTab(AdminTab.Products)">Продукты и категории</button>
+        <button class="tab-button @GetSelectedButtonStyle(AdminTab.Users)" @onclick="() => SelectTab(AdminTab.Users)">Пользователи</button>
     </div>
     
     <div style="height: 1px; background-color: #E8ECF2"></div>
