--- a/StationProject/Components/Pages/CatalogPage.razor.css
+++ b/StationProject/Components/Pages/CatalogPage.razor.css
@@ -37,3 +37,28 @@ a.footer-link-important {
 .focusing-outlined:focus {
     border-color: #3973E1; 
 }
+
+.category-circle {
+    border: 1px solid #8FA5AE;
+    border-radius: 24px;
+    transition: background-color 0.3s, color 0.3s;
+    font-size: 20px;
+    padding: 6px 16px;
+    vertical-align: center;
+    display: inline-block;
+}
+
+.category-circle:hover {
+    background-color: #8FA5AE;
+    color: white;
+}
+
+.category-circle-selected {
+    background-color: #3973E1;
+    color: #E4E9F1;
+    border-radius: 24px;
+    font-size: 20px;
+    padding: 6px 16px;
+    vertical-align: center;
+    display: inline-block;
+}
