--- a/StationProject/Components/Pages/OrdersBlock.razor
+++ b/StationProject/Components/Pages/OrdersBlock.razor
@@ -27,6 +27,8 @@
 
                     <div class="f-row space-between">
                         <div class="f-column gap-10">
+                            <span style="font-size: 16px">Адрес доставки: @order.StatusString</span>
+                            
                             <span style="font-size: 16px">Статус: @order.Status</span>
 
                             <span style="font-size: 14px">Ожидаемая дата: @ToRuDayNormMonth(order.ArrivalTime)</span>
