--- a/StationProject/Components/Pages/AdminTabs/StatsComponent.razor
+++ b/StationProject/Components/Pages/AdminTabs/StatsComponent.razor
@@ -1,6 +1,7 @@
 @using System.Globalization
 @using Microsoft.EntityFrameworkCore
 @using StationProject.Data
+@using StationProject.Services
 
 @inject ApplicationDbContext _db;
 
@@ -72,109 +73,32 @@
             Month: ToRuNormMonth(x.CreatedAt)
         )).ToList();
 
-        if (ActualMonths.Count < 1)
+        if (ActualMonths.Count < 4)
         {
             return;
         }
 
-        double totalGrowthRate = 0;
-        int growthCount = 0;
+        var viewsData = ActualMonths.Select(x => (double)x.Views).ToList();
+        var movingAverageCalculator = new MovingAverage(viewsData, 3);
 
-        for (int i = 1; i < ActualMonths.Count; i++)
-        {
-            var previousMonthViews = ActualMonths[i - 1].Views;
-            var currentMonthViews = ActualMonths[i].Views;
+        var mdata = movingAverageCalculator.CalculateMovingAverages();
 
-            if (previousMonthViews > 0)
-            {
-                double growthRate = (double)(currentMonthViews - previousMonthViews) / previousMonthViews;
-                totalGrowthRate += growthRate;
-                growthCount++;
-            }
-        }
-
-        double averageGrowthRate = growthCount > 0 ? totalGrowthRate / growthCount : 0;
-
-        var latestMonthView = ActualMonths.Last();
-
-        MaybeMonths =
-        [
-            latestMonthView,
-            new MonthViews(
-                Views: (long)(latestMonthView.Views * (1 + averageGrowthRate)),
-                Month: ToRuNormMonth(DateTime.UtcNow.AddMonths(1))
-            ),
-
-            new MonthViews(
-                Views: (long)(latestMonthView.Views * Math.Pow(1 + averageGrowthRate, 2)),
-                Month: ToRuNormMonth(DateTime.UtcNow.AddMonths(2))
-            )
+        MaybeMonths = [
+            new MonthViews(ActualMonths.Last().Views, ActualMonths.Last().Month)
         ];
+
+        for (int i = 0; i < 2; i++)
+        {
+            double nextViewCount = movingAverageCalculator.CalculateNextValue(mdata);
+
+            MaybeMonths.Add(new MonthViews(
+                Views: (long)nextViewCount,
+                Month: ToRuNormMonth(DateTime.UtcNow.AddMonths(i + 1))
+            ));
+
+            mdata.Add(nextViewCount);
+        }
     }
-/*
- *
- * function movingAverage(data, windowSize) {
-  if (windowSize > data.length) {
-    throw new Error("Window size must be less than or equal to the length of the data");
-  }
-  
-  const movingAverages = [];
-  for (let i = 0; i <= data.length - windowSize; i++) {
-    const window = data.slice(i, i + windowSize);
-    const avg = +(window.reduce((sum, val) => sum + val, 0) / windowSize).toFixed(2);
-    console.log(`m = (${window.join(" + ")}) / ${windowSize} = ${avg}`);
-    movingAverages.push(avg);
-  }
-  
-  return movingAverages;
-}
-
-function calcNext(data, mdata, window) {
-  const y = +(mdata[mdata.length - 1] + 1 / window * (data[data.length - 1] - data[data.length - 2])).toFixed(2);
-  console.log(`y = ${mdata[mdata.length - 1]} + 1 / ${window} * (${data[data.length - 1]} - ${data[data.length - 2]}) = ${y}`);
-  data.push(y);
-
-  const newWindow = data.slice(-window);
-  const m = +(newWindow.reduce((sum, val) => sum + val, 0) / window).toFixed(2);
-  console.log(`m = (${newWindow.join(" + ")}) / ${window} = ${m}`);
-  mdata.push(m);
-}
-
-// Исходные данные
-let data = [78, 105, 175, 154, 173, 221, 258, 133, 95, 115];
-let mdata = movingAverage(data, 3);
-
-console.log("Data:", data);
-console.log("Moving Averages:", mdata);
-
-calcNext(data, mdata, 3);
-calcNext(data, mdata, 3);
-
-console.log("Updated Data:", data);
-console.log("Updated Moving Averages:", mdata);
-
-const rs = [];
-for (let i = 1; i <= mdata.length; i++) {
-  const diff = +(data[i] - mdata[i - 1]).toFixed(2);
-  const squaredDiff = +(diff ** 2).toFixed(2);
-  const relativeError = +(Math.abs(diff) / data[i]).toFixed(2);
-  rs.push([diff, squaredDiff, relativeError]);
-}
-
-console.log("Results:");
-console.log(rs.slice(0, -2).map(row => row.join(", ")).join("\n"));
-
-let a = 0, b = 0, c = 0;
-rs.forEach(([x, y, z]) => {
-  a += x;
-  b += y;
-  c += z;
-});
-
-console.log(`Sum A: ${a}, Sum B: ${b}, Sum C: ${c}, Length: ${rs.length}`);
-console.log(`Average A: ${(a / rs.length).toFixed(2)}, Average B: ${(b / rs.length).toFixed(2)}, Average C: ${(c / rs.length).toFixed(2)}`);
-
- */
 
     public static string ToRuNormMonth(DateTime? dateTime)
     {
